--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,18 @@ h1 {
     text-align: center;
     margin-top: 20px;
 }
+
+html, body {
+  height: 100%;
+  margin: 0;
+  overflow-x: hidden;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex: 1;
+}
